--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "seed": "ts-node --esm prisma/seed.ts"
   },
   "scripts": {
+    "test-integrity": "node integrity.cjs",
     "test-queries": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/routes/gql-queries.test.ts\"",
     "test-mutations": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/routes/gql-mutations.test.ts\"",
     "test-rule": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/routes/gql-rule.test.ts\"",
