--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test-mutations": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/routes/gql-mutations.test.ts\"",
     "test-rule": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/routes/gql-rule.test.ts\"",
     "test-loader": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/routes/gql-loader.test.ts\"",
+    "test-loader-prime": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/routes/gql-loader-prime.test.ts\"",
     "start": "npm run build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
@@ -45,7 +46,8 @@
     "fastify-cli": "^5.5.1",
     "fastify-plugin": "^4.0.0",
     "graphql": "^16.6.0",
-    "graphql-depth-limit": "^1.1.0"
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-parse-resolve-info": "^4.13.0"
   },
   "devDependencies": {
     "@types/graphql-depth-limit": "^1.1.3",
